--- a/public_html/pastebin.css
+++ b/public_html/pastebin.css
@@ -5,10 +5,10 @@ http://www.bluerobot.com/web/layouts/
 */
 
 /**
- * $Project: Not-Pastebin $
- * $Id: pastebin.css,v 0.0.1-r01 11/10/2017 12:49:28 AM veritas Exp $
+ * Project: Codebin (Fork of Pastebin)
+ * ver: v0.0.1-r04 11/11/2017 2:16:41 AM
  * 
- * Not-Pastebin Collaboration Tool
+ * Codebin Collaboration Tool
  * http://scans.vts-tech.org/
  *
  * This file copyright (C) 2017 Nigel Todman (nigel@nigeltodman.com)
